# Chrono-shift

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  cleanup.bat  cleanup.sh  gen_cert.bat  gen_cert.sh
.claude/: settings.local.json
client/: CMakeLists.txt
client/devtools/cli/: Makefile  devtools_cli.h  devtools_cli.hpp  main.c  main.cpp  net_http.c  net_http.cpp  terminal_style.h
client/devtools/cli/commands/: cmd_bridge.cpp  cmd_config.c  cmd_config.cpp  cmd_connect.c  cmd_connect.cpp  cmd_crypto.c  cmd_crypto.cpp  cmd_db.c  cmd_db.cpp  cmd_disconnect.c  cmd_disconnect.cpp  cmd_endpoint.c  cmd_endpoint.cpp  cmd_friend.c  cmd_friend.cpp  cmd_gen_cert.c  cmd_gen_cert.cpp  cmd_health.c  cmd_health.cpp  cmd_i2p.cpp  cmd_ipc.c  cmd_ipc.cpp  cmd_json.c  cmd_json.cpp  cmd_msg.c  cmd_msg.cpp  cmd_network.c  cmd_network.cpp  cmd_obfuscate.c  cmd_obfuscate.cpp  cmd_ping.c  cmd_ping.cpp  cmd_rate_test.c  cmd_rate_test.cpp  cmd_session.c  cmd_session.cpp  cmd_social.cpp  cmd_storage.c  cmd_storage.cpp  cmd_tls.c  (+14 more)
client/devtools/core/: DevToolsEngine.cpp  DevToolsEngine.h  DevToolsHttpApi.cpp  DevToolsHttpApi.h  DevToolsIpcHandler.cpp  DevToolsIpcHandler.h
client/devtools/ui/css/: devtools.css
client/devtools/ui/js/: devtools.js
client/include/: client_http_server.h  ipc_bridge.h  json_parser.h  local_storage.h  net_core.h  network.h  platform_compat.h  print_compat.h  protocol.h  tls_client.h  webview_manager.h
client/security/: Cargo.toml  build.rs
client/security/asm/: obfuscate.asm  obfuscate.lst
client/security/include/: chrono_client_security.h
client/security/src/: asm_bridge.rs  crypto.rs  lib.rs  sanitizer.rs  secure_storage.rs  session.rs
client/src/: client_http_server.c  ipc_bridge.c  json_parser.c  local_storage.c  main.c  net_http.c  net_sha1.c  net_tcp.c  net_ws.c  network.c  updater.c  webview_manager.c
client/src/ai/: AIConfig.cpp  AIConfig.h  AIProvider.cpp  AIProvider.h  OpenAIProvider.cpp  OpenAIProvider.h
client/src/app/: AppContext.cpp  AppContext.h  ClientHttpServer.cpp  ClientHttpServer.h  IpcBridge.cpp  IpcBridge.h  TlsServerContext.cpp  TlsServerContext.h  Updater.h  WebViewManager.cpp
client/src/glue/: GlueLayer.cpp  GlueLayer.h  GlueTypes.cpp  GlueTypes.h  IdentityManager.h  MessageRouter.h  ServiceLayer.cpp  ServiceLayer.h  TransportBridge.cpp  TransportBridge.h  TransportInterface.h
client/src/glue/java/: JavaBridge.h
client/src/glue/rust/: RustFFI.h
client/src/i2p/: I2pdEmbedded.cpp  I2pdEmbedded.h  SamClient.cpp  SamClient.h
client/src/network/: HttpConnection.cpp  HttpConnection.h  NetworkClient.cpp  NetworkClient.h  Sha1.cpp  TcpConnection.cpp  TcpConnection.h  TlsWrapper.cpp  WebSocketClient.cpp  WebSocketClient.h  tls_client.c
client/src/plugin/: PluginManifest.cpp  PluginManifest.h
client/src/security/: CryptoEngine.cpp  CryptoEngine.h  TokenManager.cpp  TokenManager.h
client/src/social/: SocialManager.cpp  SocialManager.h
client/src/storage/: LocalStorage.cpp  LocalStorage.h  SessionManager.cpp  SessionManager.h
client/src/tor/: TorClient.cpp  TorClient.h  TorEmbedded.cpp  TorEmbedded.h
client/src/util/: Logger.h  Utils.cpp  Utils.h
client/tools/: Makefile  debug_cli.c  stress_test.cpp
client/ui/: index.html  oauth_callback.html
client/ui/css/: chat.css  community.css  global.css  login.css  main.css  qq_group.css  variables.css
client/ui/css/themes/: default.css
client/ui/js/: ai_chat.js  ai_smart_reply.js  api.js  app.js  auth.js  chat.js  community.js  contacts.js  ipc.js  oauth.js  plugin_api.js  qq_emoji.js  qq_friends.js  qq_group.js  theme_engine.js
docs/: AI_INTEGRATION.md  API.md  ASM_OBFUSCATION.md  BUILD.md  HTTPS_MIGRATION.md  I2P_INTEGRATION.md  PROJECT_OVERVIEW.md  PROTOCOL.md  SECURITY_AUDIT.md  TESTING.md  TRANSPORT.md
installer/: client_installer.nsi  server_installer.nsi
plans/: ARCHITECTURE.md  phase_7_optimization_plan.md  phase_8_security_testing_cpp_migration.md  phase_9_1b_client_cpp_refactor_plan.md  phase_9_2_frontend_plan.md  phase_9_2_oauth_login_plan.md  phase_9_cpp_full_refactor_oauth_security.md  (+6 more)
plans/client/security/: Cargo.toml
server/: CMakeLists.txt  Makefile
server/certs/: server.crt  server.key
server/include/: community_handler.h  database.h  db_core.h  file_handler.h  http_core.h  http_server.h  message_handler.h  platform_compat.h  server.h  tls_server.h  user_handler.h  websocket.h
server/security/: Cargo.toml
server/security/src/: auth.rs  crypto.rs  csrf.rs  email_verifier.rs  input_sanitizer.rs  key_mgmt.rs  lib.rs  oauth_client.rs  password.rs  rate_limiter.rs  safe_string.rs  session_manager.rs
server/src/: community_handler.c  database.c  db_core.c  db_friends.c  db_messages.c  db_templates.c  db_users.c  file_handler.c  http_conn.c  http_core.c  http_parse.c  http_response.c  http_server.c  json_parser.c  main.c  main_cpp.cpp  message_handler.c  platform_compat.c  platform_dir.c  platform_net.c  platform_thread.c  protocol.c  rust_stubs.c  tls_server.c  tls_stub.c  user_handler.c  utils.c  websocket.c
server/src/db/: Database.cpp  Database.h
server/src/ffi/: RustBridge.cpp  RustBridge.h
server/src/handler/: MessageHandler.cpp  MessageHandler.h  OAuthHandler.cpp  OAuthHandler.h  UserHandler.cpp  UserHandler.h
server/src/http/: HttpParser.cpp  HttpParser.h  HttpServer.cpp  HttpServer.h  HttpTypes.cpp  HttpTypes.h
server/src/json/: JsonParser.cpp  JsonParser.h  JsonValue.cpp  JsonValue.h
server/src/security/: EmailVerifier.cpp  EmailVerifier.h  OAuthClient.cpp  OAuthClient.h  SecurityManager.cpp  SecurityManager.h
server/src/tls/: TlsContext.cpp  TlsContext.h
server/src/util/: Logger.cpp  Logger.h  Protocol.cpp  Protocol.h  StringUtils.cpp  StringUtils.h
server/src/ws/: WebSocket.cpp  WebSocket.h
server/tests/: fuzz_json_parser.c  run_security_tests.sh  test_http_parse.c  test_json_parser.c  test_runner.c  test_s_ctx_stub.c  test_security.cpp  unity.h
server/tools/: debug_cli.c  fix_html_escape.py  fix_line208.py  fix_test_asserts.ps1  fix_test_asserts.py  stress_test.c
(+71 files in other folders)
