[package]
name = "chrono-server-security"
version = "0.1.0"
edition = "2021"
description = "Chrono-shift Server Security Module (Rust FFI)"

[lib]
name = "chrono_server_security"
crate-type = ["staticlib"]

[dependencies]
argon2 = "0.5"
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
base64 = "0.22"
aes-gcm = "0.10"
