[package]
name = "chrono-client-security"
version = "0.1.0"
edition = "2021"
description = "Chrono-shift Client Security Module (Rust FFI)"

[lib]
name = "chrono_client_security"
crate-type = ["staticlib"]

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ring = "0.17"
